--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
               <div class="col-lg-12 col-xl-6 col-12">
                 <div class="ep-hero__content">
                   <h1 class="ep-hero__title ep-split-text left hide-herotext">
-                    Chennai's Top-Rated
+                    Most Trusted 
                     <span>
-                      Software Training Institute
+                      Software Training and Placement Institute
                     </span>
                   </h1>
                   <div class="google-rating-container" style="display: flex; align-items: center; margin: 20px 0 30px; background-color: #f8f9fa; padding: 15px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); max-width: 300px;">
@@ -239,6 +239,9 @@
                       <div class="rating-stars" style="color: #FBBC05; font-size: 24px; letter-spacing: 2px;">
                         ★★★★★
                       </div>
+                      <span>
+                        Rated by students across TamilNadu
+                      </span>
                     </div>
                   </div>
                   <h5 class="ep-hero__text">
