feat: add Blog 2 navigation link and update script versions for cache busting

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     content="online learning, education, e-learning, courses, tutorials, educational resources, skill development, career enhancement" />
 
   <!-- Import Header Footer Mobile Menu etc -->
-  <script src="header.js" defer></script>
-  <script src="mobilemenu.js" defer></script>
+  <script src="header.js?v=2" defer></script>
+  <script src="mobilemenu.js?v=2" defer></script>
   <script src="footer.js" defer></script>
   <script src="clients.js" defer></script>
   <script src="partner.js" defer></script>
