--- a/index.html
+++ b/index.html
@@ -215,33 +215,32 @@
                     </div>
                   </div>
                 </div>
-              </div>
-
+              </div>  
               <div class="col-lg-12 col-xl-6 col-12">
                 <div class="ep-hero__content">
-                  <div class="google-rating" style="margin: 20px 0 10px;">
-                    <div class="google-badge" style="display: flex; align-items: center; background-color: #f8f9fa; padding: 12px 16px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); width: fit-content;">
-                      <div class="google-logo" style="margin-right: 12px;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 48 48">
+                  <div class="google-rating" style="display: flex; align-items: center; gap: 20px; flex-wrap: nowrap; margin: 0 0 24px;">
+                    <div class="google-badge" style="display: flex; align-items: center; background: linear-gradient(180deg, #ffffff, #f3f4f6); padding: 18px 22px; border-radius: 14px; box-shadow: 0 8px 24px rgba(0,0,0,0.12), 0 2px 6px rgba(66,133,244,0.15); border: 2px solid rgba(66,133,244,0.35); width: fit-content;">
+                      <div class="google-logo" style="margin-right: 16px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 48 48">
                           <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/>
                           <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"/>
                           <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/>
                           <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/>
                         </svg>
                       </div>
-                      <div class="rating-row" style="display: flex; align-items: center; gap: 12px;">
-                        <div class="rating-number" style="font-size: 42px; font-weight: bold; line-height: 1; color: #202124;">4.9</div>
-                        <div class="rating-stars" style="color: #FBBC05; font-size: 24px; letter-spacing: 2px;">★★★★★</div>
+                      <div class="rating-row" style="display: flex; align-items: center; gap: 16px;">
+                        <div class="rating-number" style="font-size: 56px; font-weight: 900; line-height: 1; color: #202124;">4.9</div>
+                        <div class="rating-stars" style="color: #FBBC05; font-size: 32px; letter-spacing: 3px;">★★★★★</div>
                       </div>
                     </div>
-                    <div class="rating-caption" style="margin-top: 8px; font-size: 14px; color: #4a4a4a;">
+                    <div class="rating-caption" style="font-size: 22px; font-weight: 800; color: orangered; background: rgba(255,69,0,0.08); padding: 10px 14px; border-radius: 12px; border: 1px solid rgba(255,69,0,0.25); white-space: nowrap; display: inline-flex; align-items: center;">
                       Rated by Aspirants Across tamilnadu
                     </div>
                   </div>
                   <h1 class="ep-hero__title ep-split-text left hide-herotext">
                     Best 
                     <span>
-                      Software Training and Placement Institute in TamilNadu
+                      Software Training and Placement Institute in Chennai
                     </span>
                   </h1>
                   <h5 class="ep-hero__text">
