chore: remove version query strings and update Google Apps Script URLs

--- a/blog-2-details.html
+++ b/blog-2-details.html
@@ -51,8 +51,8 @@
     </style>
 
     <!-- Common components -->
-    <script src="header.js?v=2" defer></script>
-    <script src="mobilemenu.js?v=2" defer></script>
+    <script src="header.js" defer></script>
+    <script src="mobilemenu.js" defer></script>
     <script src="footer.js" defer></script>
     <script src="clients.js" defer></script>
     <script src="partner.js" defer></script>
