--- a/interview-support.html
+++ b/interview-support.html
@@ -40,8 +40,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Import Header Footer Mobile Menu etc -->
-    <script src="header.js?v=2" defer></script>
-    <script src="mobilemenu.js?v=2" defer></script>
+    <script src="header.js" defer></script>
+    <script src="mobilemenu.js" defer></script>
     <script src="footer.js" defer></script>
     <script src="title.js" defer></script>
     <script src="partner.js" defer></script>
