--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
 
 
     <!-- Import Header Footer Mobile Menu etc -->
-    <script src="header.js?v=2" defer></script>
-    <script src="mobilemenu.js?v=2" defer></script>
+    <script src="header.js" defer></script>
+    <script src="mobilemenu.js" defer></script>
     <script src="footer.js" defer></script>
     <script src="clients.js" defer></script>
     <script src="title.js" defer></script>
